# beanputter-htmx

./: .gitignore  Cargo.toml  Dioxus.toml  flake.nix
assets/: main.css  tailwind.css
nix/: build.nix
src/: csv.rs  main.rs  transaction.rs
templates/: index.html
