[package]
name = "beanputter-htmx"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["tracing", "multipart"] }
chrono = { version = "0.4" }
csv = "1"
either = "1"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
uuid = { version = "1.17.0", features = ["v4"] }
maud = { version = "0.27.0", features = ["axum"] }
