[package]
name = "beanputter-htmx"
version = "0.1.0"
authors = ["Luca Bracone <lucabr123@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
csv = "1.3.1"
dioxus = { version = "0.6.0", features = [] }
rust_decimal = { version = "1.37.2", features = ["serde", "serde-with-float"] }
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
